--- a/android/build.gradle
+++ b/android/build.gradle
@@ -47,4 +47,7 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+    implementation fileTree(dir: 'spindance.code-challenge.mobile.android.weather-sensor-service/lib/build/libs', include: ['*.jar'])
 }
